@@ -46,6 +46,7 @@ Bugs fixed
 * #3840: make checking ``epub_uid`` strict
 * #3851, #3706: Fix about box drawing characters for PDF output
 * #3900: autosummary could not find methods
+* #3902: Emit error if ``latex_documents`` contains non-unicode string in py2
 
 Testing
 --------
